Animacion god en proceso

--- a/index.html
+++ b/index.html
@@ -1,236 +1,249 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
+<head>
+    <meta charset="UTF-8"/>
     <meta
-      name="viewport"
-      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+            name="viewport"
+            content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
     />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="./styles/style.css" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
+    <link rel="stylesheet" href="./styles/style.css"/>
     <title>Orla</title>
-  </head>
-  <body>
-    <div id="headerText">
-      <div><h1>I.E.S Mar de Cádiz</h1></div>
+</head>
+<body>
+<div id="headerText">
+    <div><h1>I.E.S Mar de Cádiz</h1></div>
 
-      <div><h1>2º DAW</h1></div>
+    <div><h1>2º DAW</h1></div>
 
-      <div><h1>Curso 2023/2024</h1></div>
-    </div>
-    <header>
+    <div><h1>Curso 2023/2024</h1></div>
+    <a href="#main"><img src="/assets/flecha.png" alt="Flecha"></a>
+</div>
 
-    </header>
-    <section id="main">
-      <main class="teachers">
-        <div>
-          <div>
-            <img class="crown" src="/assets/laurel-wreath-png.png" alt="Profesores" />
-            <img class="gif" src="assets/sinFondo/profesores/RAFA-unscreen.gif" alt="Rafa" />
-          </div>
-          <span>Rafael del Rio</span>
-        </div>
-        <div>
-          <div>
-            <img class="crown" src="/assets/laurel-wreath-png.png" alt="Profesores" />
-            <img class="gif" src="assets/sinFondo/profesores/ANTONIOPROFE-unscreen.gif" alt="Antinio" />
-          </div>
-          <span>Antonio Lozano</span>
-        </div>
-        <div>
-          <div>
-            <img class="crown" src="/assets/laurel-wreath-png.png" alt="Profesores" />
-            <img class="gif" src="assets/sinFondo/profesores/FERNANDO-unscreen.gif" alt="" />
-          </div>
-          <span>Fernando Vargas</span>
-        </div>
-        <div>
-          <div>
-            <img class="crown" src="/assets/laurel-wreath-png.png" alt="Profesores" />
-            <img class="gif" src="assets/sinFondo/profesores/ZENAIDA-unscreen.gif" alt="" />
-          </div>
-          <span>Zenaida González</span>
-        </div>
-        <div>
-          <div>
-            <img class="crown" src="/assets/laurel-wreath-png.png" alt="Profesores" />
-            <img class="gif" src="assets/sinFondo/profesores/PABLOPROFESOR-unscreen.gif" alt="" />
-          </div>
+<header id="header">
 
-          <span>Pablo Galván</span>
-        </div>
-        <div>
-          <div>
-            <img class="crown" src="/assets/laurel-wreath-png.png" alt="Profesores" />
-            <img class="gif" src="assets/sinFondo/profesores/CRISTINACARMEN-unscreen.gif" alt="" />
-          </div>
-          <span>Cristina y Carmen</span>
-        </div>
-        <div>
-          <div>
-            <img class="crown" src="/assets/laurel-wreath-png.png" alt="Profesores" />
-            <img class="gif" src="assets/sinFondo/profesores/ROCIO-unscreen.gif" alt="" />
-          </div>
-          <span>Rocio</span>
-        </div>
-      </main>
-      <main class="students">
-        <div>
-          <div class="">
-            <img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent" />
-            <img class="gif" src="assets/sinFondo/alumnos/ANDRES-unscreen.gif" alt="" />
-          </div>
-          <span>Daniel Andrés</span>
-        </div>
-        <div>
-          <div class="">
-            <img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent" />
-            <img class="gif" src="assets/sinFondo/alumnos/ANTONIO-unscreen.gif" alt="" />
-          </div>
-          <span>Antonio Batista</span>
-        </div>
-        <div>
-          <div class="">
-            <img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent" />
-            <img class="gif" src="assets/sinFondo/alumnos/BLANCAS-unscreen.gif" alt="" />
-          </div>
-          <span>Daniel Blancas</span>
-        </div>
-        <div>
-          <div class="">
-            <img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent" />
-            <img class="gif" src="assets/sinFondo/alumnos/CADENILLAS-unscreen.gif" alt="" />
-          </div>
-          <span>Diego Cadenillas</span>
-        </div>
-        <div>
-          <div class="">
-            <img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent" />
-            <img class="gif" src="assets/sinFondo/alumnos/CARABALLO-unscreen.gif" alt="" />
-          </div>
-          <span>Álvaro Caraballo</span>
-        </div>
-        <div>
-          <div class="">
-            <img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent" />
-            <img class="gif" src="assets/sinFondo/alumnos/CARABANTE-unscreen.gif" alt="" />
-          </div>
-          <span>Álvaro Carabante</span>
-        </div>
-        <div>
-          <div class="">
-            <img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent" />
-            <img class="gif" src="assets/sinFondo/alumnos/JULIA-unscreen.gif" alt="" />
-          </div>
-          <span>Julia Carrera</span>
-        </div>
-        <div>
-          <div class="">
-            <img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent" />
-            <img class="gif" src="assets/sinFondo/alumnos/JUANJO-unscreen.gif" alt="" />
-          </div>
-          <span>Juan José Catalá</span>
-        </div>
-        <div>
-          <div class="">
-            <img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent" />
-            <img class="gif" src="assets/sinFondo/alumnos/NATAN-unscreen.gif" alt="" />
-          </div>
-          <span>Natan Cejas</span>
-        </div>
-        <div>
-          <div class="">
-            <img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent" />
-            <img class="gif" src="assets/sinFondo/alumnos/CRESPO-unscreen.gif" alt="" />
-          </div>
-          <span>Miguel Crespo</span>
-        </div>
-        <div>
-          <div class="">
-            <img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent" />
-            <img class="gif" src="assets/sinFondo/alumnos/EDUARDO-unscreen.gif" alt="" />
-          </div>
-          <span>Eduardo Daza</span>
-        </div>
-        <div>
-          <div class="">
-            <img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent" />
-            <img class="gif" src="assets/sinFondo/alumnos/RAMON-unscreen.gif" alt="" />
-          </div>
-          <span>Ramón Gallardo</span>
-        </div>
-        <div>
-          <div class="">
-            <img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent" />
-            <img class="gif" src="assets/sinFondo/alumnos/JOSELUIS-unscreen.gif" alt="" />
-          </div>
-          <span>Jose Luis Granado</span>
-        </div>
-        <div>
-          <div class="">
-            <img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent" />
-            <img class="gif" src="assets/sinFondo/alumnos/ANA-unscreen.gif" alt="" />
-          </div>
-          <span>Ana Montes</span>
-        </div>
-        <div>
-          <div class="">
-            <img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent" />
-            <img class="gif" src="assets/sinFondo/alumnos/MOISES-unscreen.gif" alt="" />
-          </div>
-          <span>Moisés Moreno</span>
-        </div>
-        <div>
-          <div class="">
-            <img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent" />
-            <img class="gif" src="assets/sinFondo/alumnos/JAIME-remastered.gif" alt="" />
-          </div>
-          <span>Jaime Pérez</span>
-        </div>
-        <div>
-          <div class="">
-            <img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent" />
-            <img class="gif" src="assets/sinFondo/alumnos/ALEJANDRO-unscreen.gif" alt="" />
-          </div>
-          <span>Alejandro Raposo</span>
-        </div>
+</header>
+<section id="main">
+    <main class="teachers">
 
         <div>
-          <div class="">
-            <img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent" />
-            <img class="gif" src="assets/sinFondo/alumnos/REY-unscreen.gif" alt="" />
-          </div>
-          <span>Cristian Rey</span>
+            <div>
+                <img class="crown" src="/assets/laurel-wreath-png.png" alt="Profesores"/>
+                <img class="gif" src="assets/sinFondo/profesores/RAFA-unscreen.gif" alt="Rafa"/>
+            </div>
+            <span>Rafael del Rio</span>
         </div>
         <div>
-          <div class="">
-            <img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent" />
-            <img class="gif" src="./assets/sinFondo/alumnos/SANCHEZ-unscreen.gif" id="sanchez" alt="" />
-          </div>
-          <span>Gonzalo Sánchez </span>
+            <div>
+                <img class="crown" src="/assets/laurel-wreath-png.png" alt="Profesores"/>
+                <img class="gif" src="assets/sinFondo/profesores/ANTONIOPROFE-unscreen.gif" alt="Antinio"/>
+            </div>
+            <span>Antonio Lozano</span>
         </div>
         <div>
-          <div class="">
-            <img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent" />
-            <img class="gif" src="assets/sinFondo/alumnos/PABLO-unscreen.gif" alt="" />
-          </div>
-          <span>Pablo Valladares</span>
+            <div>
+                <img class="crown" src="/assets/laurel-wreath-png.png" alt="Profesores"/>
+                <img class="gif" src="assets/sinFondo/profesores/FERNANDO-unscreen.gif" alt=""/>
+            </div>
+            <span>Fernando Vargas</span>
         </div>
         <div>
-          <div class="">
-            <img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent" />
-            <img class="gif" src="assets/sinFondo/alumnos/JAVIER-unscreen.gif" alt="" />
-          </div>
-          <span>Javier Verano</span>
+            <div>
+                <img class="crown" src="/assets/laurel-wreath-png.png" alt="Profesores"/>
+                <img class="gif" src="assets/sinFondo/profesores/ZENAIDA-unscreen.gif" alt=""/>
+            </div>
+            <span>Zenaida González</span>
         </div>
-      </main>
-    </section>
-    <script>
-      let students =
+        <div>
+            <div>
+                <img class="crown" src="/assets/laurel-wreath-png.png" alt="Profesores"/>
+                <img class="gif" src="assets/sinFondo/profesores/PABLOPROFESOR-unscreen.gif" alt=""/>
+            </div>
 
-      setTimeout(() => {
+            <span>Pablo Galván</span>
+        </div>
+        <div>
+            <div>
+                <img class="crown" src="/assets/laurel-wreath-png.png" alt="Profesores"/>
+                <img class="gif" src="assets/sinFondo/profesores/CRISTINACARMEN-unscreen.gif" alt=""/>
+            </div>
+            <span>Cristina y Carmen</span>
+        </div>
+        <div>
+            <div>
+                <img class="crown" src="/assets/laurel-wreath-png.png" alt="Profesores"/>
+                <img class="gif" src="assets/sinFondo/profesores/ROCIO-unscreen.gif" alt=""/>
+            </div>
+            <span>Rocio</span>
+        </div>
+    </main>
+    <main class="students">
+        <div>
+            <div class="">
+                <img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent"/>
+                <img class="gif" src="assets/sinFondo/alumnos/ANDRES-unscreen.gif" alt=""/>
+            </div>
+            <span>Daniel Andrés</span>
+        </div>
+        <div>
+            <div class="">
+                <img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent"/>
+                <img class="gif" src="assets/sinFondo/alumnos/ANTONIO-unscreen.gif" alt=""/>
+            </div>
+            <span>Antonio Batista</span>
+        </div>
+        <div>
+            <div class="">
+                <img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent"/>
+                <img class="gif" src="assets/sinFondo/alumnos/BLANCAS-unscreen.gif" alt=""/>
+            </div>
+            <span>Daniel Blancas</span>
+        </div>
+        <div>
+            <div class="">
+                <img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent"/>
+                <img class="gif" src="assets/sinFondo/alumnos/CADENILLAS-unscreen.gif" alt=""/>
+            </div>
+            <span>Diego Cadenillas</span>
+        </div>
+        <div>
+            <div class="">
+                <img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent"/>
+                <img class="gif" src="assets/sinFondo/alumnos/CARABALLO-unscreen.gif" alt=""/>
+            </div>
+            <span>Álvaro Caraballo</span>
+        </div>
+        <div>
+            <div class="">
+                <img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent"/>
+                <img class="gif" src="assets/sinFondo/alumnos/CARABANTE-unscreen.gif" alt=""/>
+            </div>
+            <span>Álvaro Carabante</span>
+        </div>
+        <div>
+            <div class="">
+                <img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent"/>
+                <img class="gif" src="assets/sinFondo/alumnos/JULIA-unscreen.gif" alt=""/>
+            </div>
+            <span>Julia Carrera</span>
+        </div>
+        <div>
+            <div class="">
+                <img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent"/>
+                <img class="gif" src="assets/sinFondo/alumnos/JUANJO-unscreen.gif" alt=""/>
+            </div>
+            <span>Juan José Catalá</span>
+        </div>
+        <div>
+            <div class="">
+                <img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent"/>
+                <img class="gif" src="assets/sinFondo/alumnos/NATAN-unscreen.gif" alt=""/>
+            </div>
+            <span>Natan Cejas</span>
+        </div>
+        <div>
+            <div class="">
+                <img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent"/>
+                <img class="gif" src="assets/sinFondo/alumnos/CRESPO-unscreen.gif" alt=""/>
+            </div>
+            <span>Miguel Crespo</span>
+        </div>
+        <div>
+            <div class="">
+                <img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent"/>
+                <img class="gif" src="assets/sinFondo/alumnos/EDUARDO-unscreen.gif" alt=""/>
+            </div>
+            <span>Eduardo Daza</span>
+        </div>
+        <div>
+            <div class="">
+                <img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent"/>
+                <img class="gif" src="assets/sinFondo/alumnos/RAMON-unscreen.gif" alt=""/>
+            </div>
+            <span>Ramón Gallardo</span>
+        </div>
+        <div>
+            <div class="">
+                <img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent"/>
+                <img class="gif" src="assets/sinFondo/alumnos/JOSELUIS-unscreen.gif" alt=""/>
+            </div>
+            <span>Jose Luis Granado</span>
+        </div>
+        <div>
+            <div class="">
+                <img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent"/>
+                <img class="gif" src="assets/sinFondo/alumnos/ANA-unscreen.gif" alt=""/>
+            </div>
+            <span>Ana Montes</span>
+        </div>
+        <div>
+            <div class="">
+                <img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent"/>
+                <img class="gif" src="assets/sinFondo/alumnos/MOISES-unscreen.gif" alt=""/>
+            </div>
+            <span>Moisés Moreno</span>
+        </div>
+        <div>
+            <div class="">
+                <img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent"/>
+                <img class="gif" src="assets/sinFondo/alumnos/JAIME-remastered.gif" alt=""/>
+            </div>
+            <span>Jaime Pérez</span>
+        </div>
+        <div>
+            <div class="">
+                <img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent"/>
+                <img class="gif" src="assets/sinFondo/alumnos/ALEJANDRO-unscreen.gif" alt=""/>
+            </div>
+            <span>Alejandro Raposo</span>
+        </div>
+
+        <div>
+            <div class="">
+                <img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent"/>
+                <img class="gif" src="assets/sinFondo/alumnos/REY-unscreen.gif" alt=""/>
+            </div>
+            <span>Cristian Rey</span>
+        </div>
+        <div>
+            <div class="">
+                <img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent"/>
+                <img class="gif" src="./assets/sinFondo/alumnos/SANCHEZ-unscreen.gif" id="sanchez" alt=""/>
+            </div>
+            <span>Gonzalo Sánchez </span>
+        </div>
+        <div>
+            <div class="">
+                <img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent"/>
+                <img class="gif" src="assets/sinFondo/alumnos/PABLO-unscreen.gif" alt=""/>
+            </div>
+            <span>Pablo Valladares</span>
+        </div>
+        <div>
+            <div class="">
+                <img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent"/>
+                <img class="gif" src="assets/sinFondo/alumnos/JAVIER-unscreen.gif" alt=""/>
+            </div>
+            <span>Javier Verano</span>
+        </div>
+        <a href="#header"><img src="/assets/flecha.png" alt="Flecha"></a>
+    </main>
+
+</section>
+<script>
+
+    document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+        anchor.addEventListener('click', function (e) {
+            e.preventDefault();
+
+            document.querySelector(this.getAttribute('href')).scrollIntoView({
+                behavior: 'smooth'
+            });
+        });
+    });
+    setTimeout(() => {
         document.getElementById("sanchez").src = "assets/sinFondo/alumnos/SANCHEZ-unscreen.gif";
-      }, 4300);
-    </script>
-  </body>
+    }, 4300);
+</script>
+</body>
 </html>
