Animacion god en proceso

--- a/index.html
+++ b/index.html
@@ -11,15 +11,17 @@
     <title>Orla</title>
 </head>
 <body>
+<header id="mainHeader">
 <div id="headerText">
-    <div><h1>I.E.S Mar de Cádiz</h1></div>
-
-    <div><h1>2º DAW</h1></div>
-
-    <div><h1>Curso 2023/2024</h1></div>
-    <a href="#main"><img src="/assets/flecha.png" alt="Flecha"></a>
+    <div id="presentationText">I.E.S Mar de Cádiz</div>
+    <div id="secondDiv">
+        <span id="bodyText">
+            2º DAW Promocion 23-24
+        </span>
+    </div>
 </div>
-
+    <a href="#main"><img src="/assets/flecha.png" alt="Flecha"></a>
+</header>
 <header id="header">
 
 </header>
