--- a/index.html
+++ b/index.html
@@ -9,17 +9,18 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
     <link rel="stylesheet" href="./styles/style.css"/>
     <title>Orla</title>
+    <link rel="import" href="">
 </head>
 <body>
 <header id="mainHeader">
-<div id="headerText">
-    <div id="presentationText">I.E.S Mar de Cádiz</div>
-    <div id="secondDiv">
+    <div id="headerText">
+        <div id="presentationText">I.E.S Mar de Cádiz</div>
+        <div id="secondDiv">
         <span id="bodyText">
             2º DAW Promocion 23-24
         </span>
+        </div>
     </div>
-</div>
     <a href="#main"><img src="/assets/flecha.png" alt="Flecha"></a>
 </header>
 <header id="header">
@@ -65,11 +66,13 @@
             <span>Pablo Galván</span>
         </div>
         <div>
-            <div>
-                <img class="crown" src="/assets/laurel-wreath-png.png" alt="Profesores"/>
-                <img class="gif" src="assets/sinFondo/profesores/CRISTINACARMEN-unscreen.gif" alt=""/>
-            </div>
-            <span>Cristina y Carmen</span>
+
+                <div>
+                    <img class="crown" src="/assets/laurel-wreath-png.png" alt="Profesores"/>
+                    <img class="gif" src="assets/sinFondo/profesores/CRISTINACARMEN-unscreen.gif" alt=""/>
+                </div>
+                <span>Cristina y Carmen</span>
+
         </div>
         <div>
             <div>
